fixed error where li number is not showing for admonition block;

--- a/vai/package_defaults/static/style.css
+++ b/vai/package_defaults/static/style.css
@@ -1975,7 +1975,7 @@ li  p {
 }
 
 
-li:has(.admonition)::marker {
+li:has(> .admonition)::marker {
     content: none; 
 }
 
